--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 body {
+  background-color: #1F2833;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
