--- a/src/pages/beers/Beers.css
+++ b/src/pages/beers/Beers.css
@@ -1,14 +1,22 @@
+#beersPage {
+    margin-top: 10%;
+}
+
 #beersH1 {
     color: #f5f5f5;
     text-align: center;
     margin-top: 1%
 }
 
-#beersContainer {
-    width: 100%;
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+#beersPage {
+    background-color: red;
+}
+
+#beersCardColumns {
+    background-color: green;
+}
+
+#beerCard {
+    border-color: aqua;
 }
 
