--- a/src/pages/beers/Beers.css
+++ b/src/pages/beers/Beers.css
@@ -1,11 +1,12 @@
 #beersPage {
-    margin-top: 10%;
+    margin-top: 1%;
 }
 
 #beersH1 {
     color: #f5f5f5;
     text-align: center;
-    margin-top: 1%
+    margin-top: 1%;
+    margin-bottom: 5%;
 }
 
 #beersPage {
