Added beers page and its functionality.
- Added beers page, its layout and almost all functionality.

- Still need to do the searching and also when clicking on a beer it opens its page.

--- a/src/pages/beers/Beers.css
+++ b/src/pages/beers/Beers.css
@@ -1,5 +1,9 @@
 #beersPage {
     margin-top: 1%;
+    background-color: #a0a6b2;
+    border-style: solid;
+    border-color: #e0e0e0;
+    border-width: 3px;
 }
 
 #beersH1 {
@@ -9,52 +13,32 @@
     margin-bottom: 5%;
 }
 
+.beerCard {
+    opacity: 1;
+    transition: 0.3s;
+}
+
+.beerCard:hover {
+    opacity: 0.6;
+    transform: scale(1.1);
+}
+
+#beerSearch {
+    margin-bottom: 7%;
+}
+
+#searchInputGroup {
+    text-align:left;
+}
+
 #beerCardsList {
+    text-align: center;
     margin: 0;
     padding: 0;
     list-style: none;
-  }
-
-.beerImg {
-    min-width: 80%;
-    max-width: 80%;
-    min-height: 80%;
-    max-height: 80%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
 }
-
-.beerName {
-    color: orange;
-    border-width: 1px;
-    border-color: black;
-    text-align: center;
-  }
 
 .beerItem {
     display: inline-flex;
     margin: 10px;
-  }
-
-#beersPage {
-    background-color: red;
 }
-
-.beerSlogan {
-    height: 50px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-
-#beersCardColumns {
-    background-color: green;
-}
-
-#beerCard {
-    border-color: aqua;
-}
-
-
