--- a/src/pages/beers/Beers.css
+++ b/src/pages/beers/Beers.css
@@ -16,11 +16,7 @@
 .beerCard {
     opacity: 1;
     transition: 0.3s;
-}
-
-.beerCard:hover {
-    opacity: 0.6;
-    transform: scale(1.1);
+    color: black;
 }
 
 #beerSearch {
