--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
-body {
-  background-color: #1F2833;
+body, html {
+  background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
