--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 body, html {
-  background-image: linear-gradient(to top, #09203f 0%, #537895 100%);
+  background-repeat: no-repeat;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#09203f), to(#537895)); 
+  background-attachment: fixed;
   height: 100%;
   margin: 0;
   padding: 0;
