--- a/src/pages/tastingSessions/view/TastingSessionView.css
+++ b/src/pages/tastingSessions/view/TastingSessionView.css
@@ -23,3 +23,14 @@
     margin-bottom: 5%;
   }
 
+  #beer-rate-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  #beer-rating-container {
+    background-color: red;
+  }
+  
+
