--- a/src/pages/beers/add/AddModifyBeer.css
+++ b/src/pages/beers/add/AddModifyBeer.css
@@ -1,3 +1,17 @@
+#add-beer-container {
+    margin-top: 1%;
+    padding-bottom: 5px;
+    margin-bottom: 100px;
+    background-color:rgba(163, 163, 163, 0.2);
+}
+
+#add-beer-container > h1 {
+    color: #f5f5f5;
+    text-align: center;
+    margin-top: 1%;
+    margin-bottom: 5%;
+  }
+
 .form-group {
     color: white;
     text-align: center;
