--- a/src/pages/tastingSessions/view/TastingSessionView.css
+++ b/src/pages/tastingSessions/view/TastingSessionView.css
@@ -1,9 +1,9 @@
 #tastingsession-container {
     margin-top: 1%;
-    background-color: #a0a6b2;
+    background-color: #343a40;
     border-style: solid;
     border-color: #e0e0e0;
-    border-width: 3px;
+    border-width: 2px;
     padding-bottom: 5px;
     margin-bottom: 100px;
   }
@@ -15,6 +15,10 @@
     text-align: left;
     margin-top: 1%;
     margin-bottom: 5%;
+  }
+
+  #header1 {
+    color: #f5f5f5;
   }
 
   #title-date-row:nth-child(1) p {
