--- a/src/pages/beers/add/AddModifyBeer.css
+++ b/src/pages/beers/add/AddModifyBeer.css
@@ -1,6 +1,6 @@
 #add-beer-container {
     margin-top: 1%;
-    padding-bottom: 5px;
+    padding-bottom: 40px;
     margin-bottom: 100px;
     background-color:rgba(163, 163, 163, 0.2);
 }
@@ -24,4 +24,9 @@
 #buttons {
     text-align: center;
     margin:auto;
+}
+
+#previewimage {
+    width:250px;
+    height:250px;
 }
