--- a/src/pages/tastingSessions/create/CreateTastingSession.css
+++ b/src/pages/tastingSessions/create/CreateTastingSession.css
@@ -2,6 +2,7 @@
   margin-top: 1%;
   padding-bottom: 5px;
   margin-bottom: 100px;
+  background-color:rgba(163, 163, 163, 0.2);
 }
 
 #tastingSessionForm {
@@ -42,5 +43,9 @@
 }
 
 #sessionName {
+  text-align:center;
+}
+
+#additionalInfo {
   text-align:center;
 }
