--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -10,6 +10,10 @@
     margin-top: 3%;
 }
 
+.profile {
+    border-bottom: 1px solid white;
+}
+
 a {
     color: white;
     text-decoration: none;
