--- a/src/pages/beers/add/AddModifyBeer.css
+++ b/src/pages/beers/add/AddModifyBeer.css
@@ -1,11 +1,11 @@
 #add-beer-container {
     margin-top: 1%;
-    padding-bottom: 40px;
-    margin-bottom: 100px;
+    margin-bottom: 1%;
+    padding-bottom: 10px;
     background-color:rgba(163, 163, 163, 0.2);
 }
 
-#add-beer-container > h1 {
+#header1 {
     color: #f5f5f5;
     text-align: center;
     margin-top: 1%;
