--- a/src/pages/tastingSessions/create/CreateTastingSession.css
+++ b/src/pages/tastingSessions/create/CreateTastingSession.css
@@ -1,15 +1,11 @@
 #createTastingSession {
   margin-top: 1%;
-  padding-bottom: 5px;
-  margin-bottom: 100px;
+  margin-bottom: 1%;
+  padding-bottom: 10px;
   background-color:rgba(163, 163, 163, 0.2);
 }
 
-#tastingSessionForm {
-  position: relative;
-}
-
-#createTastingSession > h1 {
+#header1 {
   color: #f5f5f5;
   text-align: center;
   margin-top: 1%;
