--- a/src/pages/beers/Beers.css
+++ b/src/pages/beers/Beers.css
@@ -1,5 +1,10 @@
-#beersPage {
+
+#beers-page-container {
+    padding-top: 1%;
     margin-top: 1%;
+    margin-bottom: 1%;
+    padding-bottom: 10px;
+    background-color:rgba(163, 163, 163, 0.2);
 }
 
 #beersH1 {
